--- a/styles/main.css
+++ b/styles/main.css
@@ -15,10 +15,15 @@ h1,
 h2,
 h3 {
   color: white;
+  padding: 5px;
+  margin-left: 10px;
 }
 
-p {
+p,
+q {
   color: white;
+  padding: 2px;
+  margin: 20px;
 }
 
 header {
@@ -29,5 +34,47 @@ header {
 
 header ul {
   float: right;
-  margin-right: 40px;
+  margin-right: 10px;
+  padding: 30px;
+}
+
+a:link,
+a:visited {
+  color: white;
+}
+
+.modal-panel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5); /* adds a transparent background */
+  display: none;
+}
+
+.modal-panel.show {
+  display: block;
+}
+
+.modal-content-pane {
+  background-color: white;
+  width: 400px;
+  height: 300px;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .3);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-content {
+  top: 50%;
+  left: 50%;
+}
+
+nav {
+  display: none;
 }
